# Summer_of_Making

./: .gitignore  README.md  Terminal_Speil_Main.py  Terminalcraft.py  game_data.py  pyproject.toml  save_system.py  savegame.json  utils.py
Terminal_Speil_B1.egg-info/: PKG-INFO
saves/: savegame_slot_2.json  savegame_slot_5.json
terminal_speil.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
